--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Indigo\\Ecommerce\\": "src/",
+			"Indigo\\Ecommerce\\": "classes/",
 			"Indigo\\Admin\\": "admin/classes/"
 		}
 	},
